# newspapers-scrap

./: .gitignore  LICENSE  Makefile  README.md  app.py  logging_config.py  push_to_mongo.py  pyproject.toml  requirements.in  requirements.txt
app/: app.py
app/models/: process_tracker.py
app/routes/: __init__.py  article_routes.py  browse_routes.py  mongodb_routes.py  search_routes.py  version_routes.py
app/services/: correction.py  search.py
app/static/js/: search.js
app/templates/: browse.html  index.html  mongodb.html  topic_results.html  view_file.html
app/utils/: file.py  socket.py
docs/: mkdocs.yml
docs/docs/: index.md
newspapers_scrap/: __init__.py  config.py  dataset.py  performance_tracker.py  report_generator.py  scraper.py  security.py  utils.py
newspapers_scrap/config/: config.py  mistral.yaml  scraping.yaml  selectors.yaml  storage.yaml  urls.yaml
newspapers_scrap/data_manager/: __init__.py  organizer.py
newspapers_scrap/data_manager/ocr_cleaner/: mistral_checker.py  symspell_checker.py
newspapers_scrap/mistral_api/: client.py
newspapers_scrap/utils/: diff_generator.py  spellcheck.py
scripts/: generate_names_dictionary.py  run_search.py
static/css/: style.css
static/js/: search.js
templates/: browse.html  index.html  topic_results.html  view_file.html
