[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "newspapers_scrap"
version = "0.0.1"
description = "Web scrapping of newspapersarchives for analysis and visualisations"
authors = [
  { name = "Nicolas Bovet" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13"


[tool.ruff]
line-length = 99
src = ["newspapers_scrap"]
include = ["pyproject.toml", "newspapers_scrap/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["newspapers_scrap"]
force-sort-within-sections = true

